change the position of hook for readability

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "usetailwind",
+  "name": "nomada-code-usetailwind",
   "version": "1.0.0",
-  "description": "",
-  "keywords": [],
+  "description": "useTailwind React Hook",
+  "keywords": [
+    "react",
+    "tailwind",
+    "hook"
+  ],
   "main": "src/index.js",
   "dependencies": {
     "react": "17.0.2",
